[tool.mypy]
strict = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
preview = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = ["COM812", "CPY001", "T201", "S404", "S603", "S607", "PLR0914", "PLR0915", "C901"]

[tool.ruff.lint.per-file-ignores]
"test_stream_read_xbrl.py" = ["D1", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[project]
name = "stream-read-xbrl"
version = "0.0.0.dev0"
authors = [
  { name="Department for International Trade", email="sre@digital.trade.gov.uk" },
]
description = "Python package to parse Companies House accounts data in a streaming way"
readme = "README.md"
requires-python = ">=3.8.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4>=4.9.3",
    "httpx>=0.23.3",
    "lxml>=4.9.2",
    "python-dateutil>=2.8.2",
    "stream-unzip>=0.0.83",
    "pre-commit>=4.2.0"
]

[project.optional-dependencies]
dev = [
    "boto3>=1.26.84",
    "moto[s3]>=5.0.0",
    "pytest-cov>=4.0.0",
    "pytest-httpx>=0.21.3",
    "pytest>=7.2.1,<8",  # Some tests fail on v8, not found quite why
    "stream-zip>=0.0.57",
    "ruff>=0.14.10",
    "mypy>=1.19.1",
    "types-python-dateutil>=2.9.0",
    "lxml-stubs>=0.5.1",
    "boto3-stubs>=1.42.23",
    "mypy-boto3-s3>=1.42.21",
]

[project.urls]
"Documentation" = "https://stream-read-xbrl.docs.trade.gov.uk/"
"Source" = "https://github.com/uktrade/stream-read-xbrl"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "stream_read_xbrl.py"
]
