[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "pytest_benchmark.*"
follow_untyped_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
preview = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = ["COM812", "CPY001", "T201", "S404", "S603", "S607", "PLR0913", "PLR0914", "PLR0915", "PLR0917", "C901"]

[tool.ruff.lint.per-file-ignores]
"test_stream_read_xbrl.py" = ["D1", "S101"]

[tool.ruff.lint.pep8-naming]
ignore-names = ["GENERAL_XPATH_MAPPINGS", "PERIODICAL_XPATH_MAPPINGS"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--benchmark-group-by=group",
    "--benchmark-timer=time.process_time",
    "--benchmark-disable", # Run `pytest --benchmark-enable` to run with benchmarks.
]

[project]
name = "stream-read-xbrl"
version = "0.0.0.dev0"
authors = [
  { name="Department for Business and Trade", email="sre@digital.trade.gov.uk" },
]
description = "Python package to parse Companies House accounts data in a streaming way"
readme = "README.md"
requires-python = ">=3.9.0, <3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.27.2",
    "lxml>=6.0.2",
    "python-dateutil>=2.9.0.post0",
    "stream-unzip>=0.0.99",
]

[dependency-groups]
dev = [
    "boto3>=1.42.25",
    "boto3-stubs>=1.42.25",
    "lxml-stubs>=0.5.1",
    "moto[s3]>=5.1.19",
    "mypy>=1.19.1",
    "mypy-boto3-s3>=1.42.21",
    "nodeenv>=1.10.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-benchmark>=5.2.3",
    "pytest-httpx>=0.30.0",
    "ruff>=0.14.11",
    "stream-zip>=0.0.83",
    "types-python-dateutil>=2.9.0.20251115",
]

[project.urls]
"Documentation" = "https://stream-read-xbrl.docs.trade.gov.uk/"
"Source" = "https://github.com/uktrade/stream-read-xbrl"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "stream_read_xbrl.py"
]
